fixed chip spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -277,12 +277,12 @@ a:link {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 0.1rem;
+  gap: 0.3rem;
 
-  padding: 0.2rem 0.5rem;
+  padding: 0.15rem 0.4rem 0.15rem 0.3rem;
 
   border: 0.1rem solid var(--color-red);
-  border-radius: 10px;
+  border-radius: 24px;
 }
 
 .project-card-chip-cirle {
